model/unpackaged/objects/SIP_Entity_Field__c.object
<CustomObject>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entity</label>
        <referenceTo>SIP_Entity__c</referenceTo>
        <relationshipLabel>SIP Entity Fields</relationshipLabel>
        <relationshipName>SIP_Entity_Fields</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Entity__r.Task_Name__c</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Step_Type__c</fullName>
        <formula>Entity__r.Task_Step_Type__c</formula>
        <label>Task Step Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SIP Entity Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_ID__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Task_Step_Type__c</columns>
        <columns>Entity__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Order__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FLD{00000000}</displayFormat>
        <label>SIP Entity Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Entity Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>